--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -21,26 +21,14 @@
     opacity: 0;
     transition: .6s all;
     display: none;
+    justify-content: flex-end;
     &__body {
-        max-width: 390px;
+        max-width: 400px;
         width: 100%;
         height: 100vh;
         background: #fff;
-        padding: 30px 40px;
+        padding: 20px 40px;
         box-sizing: border-box;
-        overflow: auto;
-        &::-webkit-scrollbar {
-            width: 6px;               /* ширина всей полосы прокрутки */
-          }
-          
-        &::-webkit-scrollbar-track {
-            background: #fff;        /* цвет зоны отслеживания */
-          }
-          
-        &::-webkit-scrollbar-thumb {
-            background: rgb(246, 144, 0);    /* цвет бегунка */
-            border-radius: 20px;       /* округлось бегунка */
-        }
     }
     &__wrapper {
         display: flex;
