--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -109,9 +109,23 @@
         }
         &__contacts {
             gap: 20px;
+            &_mobile {
+                flex-direction: column;
+                align-items: flex-start;
+            }
         }
         &__phone {
             font-size: 20px;
+        }
+        &__list {
+            flex-direction: column;
+            gap: 30px;
+            align-items: flex-start;
+            &-link {
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 22px;
+            }
         }
     }
 }
