--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -9,6 +9,11 @@
 
 @import './sections/header';
 @import './sections/hero';
+@import './sections/selection';
+@import './sections/advantages';
+@import './sections/projects';
+@import './sections/buy';
+@import './sections/loans';
 
 @import './components/modal';
 
