--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -7,7 +7,6 @@
     font-size: 20px;
     font-weight: 700;
     line-height: 24px;
-    text-align: left;
     text-transform: uppercase;
     transition: .3s all;
     border-radius: 103px;
@@ -25,6 +24,7 @@
         background: $white;
         font-size: 17px;
         line-height: 21px;
+        color: $primary;
     }
 }
 @media (hover: hover) {
