--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -5,3 +5,8 @@
     box-sizing: border-box;
     margin: 0 auto;
 }
+@media (max-width: 350px) {
+    .container {
+        padding: 0 15px;
+    }
+}
