--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -112,6 +112,7 @@
             &_mobile {
                 flex-direction: column;
                 align-items: flex-start;
+                margin-left: 0;
             }
         }
         &__phone {
@@ -121,6 +122,7 @@
             flex-direction: column;
             gap: 30px;
             align-items: flex-start;
+            margin-bottom: 40px;
             &-link {
                 font-size: 18px;
                 font-weight: 500;
@@ -133,6 +135,9 @@
     .header {
         &__phone {
             font-size: 14px;
+            &_mobile {
+                font-size: 18px;
+            }
         }
     }
 }
