--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -14,6 +14,7 @@
 @import './sections/projects';
 @import './sections/buy';
 @import './sections/loans';
+@import './sections/consult';
 
 @import './components/modal';
 
