--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -15,6 +15,10 @@
 @import './sections/buy';
 @import './sections/loans';
 @import './sections/consult';
+@import './sections/income';
+@import './sections/process';
+@import './sections/news';
+@import './sections/footer';
 
 @import './components/modal';
 
