--- a/scss/components/_select.scss
+++ b/scss/components/_select.scss
@@ -42,7 +42,7 @@
                 color: rgb(131, 131, 131);
                 font-size: 14px;
                 font-weight: 500;
-                line-height: 17px;
+                line-height: normal;
             }
             .checkbox {
                 box-sizing: border-box;
