--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,15 +1,3 @@
-.search {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.4);
-    z-index: 20;
-    opacity: 0;
-    transition: .6s all;
-    display: none;
-}
 .mobile-menu {
     position: fixed;
     top: 0;
@@ -17,7 +5,7 @@
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.4);
-    z-index: 20;
+    z-index: 12;
     opacity: 0;
     transition: .6s all;
     display: none;
@@ -268,62 +256,77 @@
 .modal-news.active {
     display: flex;
 }
-.search.active {
-    display: flex;
-    animation: openSearchModal .3s forwards;
-    .header__search {
-        animation: openMoveSearchForm .6s forwards; 
-    }
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    // min-height: 100%;
+    overflow-y: scroll;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0,0,0, .8);
+    z-index: 13;
+    padding: 0 15px;
+    box-sizing: border-box;
+
 }
-.search.close {
+.overlay.active {
     display: flex;
-    animation: closeSearchModal .6s forwards;
-    .header__search {
-        animation: closeMoveSearchForm .3s forwards; 
-    }
 }
 .modal {
-    position: relative;
     background: #fff;
-    border-radius: 7px;
-    padding: 40px;
     box-sizing: border-box;
-    max-width: 400px;
+    max-width: 530px;
     width: 100%;
-    margin: 0 auto;
-    height: max-content;
+    border-radius: 38px 38px 0 0;
+    overflow: hidden;
     &__close {
-        max-width: 16px;
-        width: 100%;
         display: flex;
-        height: 16px;
-        right: 15px;
-        top: 15px;
-        position: absolute;
-        svg {
-            width: 100%;
-            height: 100%;
-        }
+        align-items: center;
+        justify-content: center;
+        flex-shrink: 0;
+        width: 60px;
+        height: 60px;
     }
-    &__title {
-        font-size: 1.125rem;
-        line-height: 1.37;
-        font-weight: 400;
-        padding: 5px 0;
-        text-align: center;
+    &__top {
+        display: grid;
+        grid-template-columns: 1fr 1fr 60px;
+        border: 1px solid rgb(219, 219, 219);
+    }
+    &__tab {
+        padding: 0;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-sizing: border-box;
+        background: rgb(219, 219, 219);
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 24px;
+        color: #838383;
+        height: 60px;
+        width: 100%;
+    }
+    &__tab.active {
+        background: #fff;
+        color: $primary;
     }
     &__subtitle {
-        font-size: 1rem;
-        line-height: 1.5;
-        font-weight: 400;
-        padding: 10px 0;
-        text-align: center;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 24px;
+        padding: 40px 40px 0 40px;
+        margin-bottom: 40px;
     }
     &__form {
-        padding: 10px 0;
+        padding: 0 40px 40px 40px;
         display: flex;
         flex-direction: column;
-        gap: 15px;
+        gap: 25px;
         &-label {
             font-size: 0.9375rem;
             padding-bottom: 10px;
@@ -333,30 +336,17 @@
         }
         &-wrap {
             input {
-                display: block;
-                width: 100%;
-                border: 1px solid transparent;
-                font-family: inherit;
-                min-height: 2.875rem;
-                font-size: inherit;
-                line-height: 1.333;
-                font-weight: 400;
-                padding: 3px 15px 2px;
+                border: 1px solid rgb(219, 219, 219);
+                height: 52px;
                 box-sizing: border-box;
-                word-break: keep-all;
-                border-radius: 4px;
-                transition: all .3s ease;
-                appearance: none;
-                color: #060607;
-                border: 1px solid rgba(6,6,7, .15);
-                transition: all .3s cubic-bezier(.21,.67,.58,1);
-                margin-bottom: 5px;
-                &:hover {
-                    border: 1px solid rgba(6,6,7, .3);
-                }
-                &:active {
-                    border: 1px solid rgba(6,6,7, .3);
-                }
+                width: 100%;
+                color: rgb(30, 30, 30);
+                font-family: "Montserrat", sans-serif;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 20px;
+                text-align: left;
+                padding: 0 20px;
             }
         }
         &-error {
@@ -377,23 +367,59 @@
             visibility: visible;
         }
         &-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 26px 30px;
-            border-radius: 20px;
-            font-family: "Roboto", sans-serif;
+            height: 52px;
+            width: 100%;
+            border-radius: 0;
             font-size: 20px;
             font-weight: 700;
-            line-height: 23px;
-            
-            text-align: center;
+            line-height: 24px;
+            letter-spacing: 0%;
+            text-align: left;
             text-transform: uppercase;
-            transition: .3s all;
-            color: #fff;
-            background: rgb(246, 144, 0);
-            border: none;
-            width: 100%;
+        }
+        &-checkbox {
+            label {
+                display: flex;
+                align-items: center;
+                gap: 12px;
+                .textt {
+                    color: rgb(131, 131, 131);
+                    font-size: 14px;
+                    font-weight: 500;
+                    line-height: normal;
+                }
+                .checkboxx {
+                    box-sizing: border-box;
+                    border: 1px solid rgb(206, 206, 206);
+                    border-radius: 4px;     
+                    width: 20px;
+                    height: 20px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-shrink: 0;           
+                }
+            }
+            input {
+                display: none;
+                &:checked + label {
+                    .checkboxx {
+                        border: 1px solid $primary;
+                        background: $primary;
+                    }
+                }
+            }
+            &_2 {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+        &-message {
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 20px;
+            a {
+                color: $primary;
+            }
         }
     }
 }
@@ -494,8 +520,25 @@
     .mobile-menu {
         &__wrapper {
             display: flex;
-            flex-direction: column-reverse;
+            // flex-direction: column-reverse;
         }
+    }
+    .modal {
+        &__subtitle {
+            padding: 20px 20px 0 20px;
+            margin-bottom: 20px;
+            font-size: 16px;
+            line-height: normal;
+        }
+        &__form {
+            padding: 0 20px 20px 20px;
+            gap: 10px;
+            &-message {
+                font-size: 14px;
+                line-height: normal;
+            }
+        }
+       
     }
 }
 
