--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,5 +1,9 @@
 .header {
     padding: 42px 0 36px 0;
+    position: sticky;
+    top: 0;
+    z-index: 12;
+    background: #fff;
     &__wrapper {
         display: flex;
         align-items: center;
@@ -149,6 +153,9 @@
         }
         &__contacts {
             display: none;
+            &_mobile {
+                display: flex;
+            }
         }
     }
 }
