--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -20,5 +20,9 @@
 @import './sections/news';
 @import './sections/footer';
 
+@import './sections/second-menu';
+@import './sections/about';
+@import './sections/cards';
+
 @import './components/modal';
 
