--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -82,6 +82,11 @@
         width: 30px;
         height: 19px;
     }
+    // &_village {
+    //     &__wrapper {
+    //         margin-bottom: 30px;
+    //     }
+    // }
 }
 @media (max-width: 1260px) {
     .header {
