--- a/scss/sections/_news.scss
+++ b/scss/sections/_news.scss
@@ -80,6 +80,12 @@
             &-body {
                 height: auto;
             }
+            &-link {
+                font-size: 14px;
+                font-weight: 700;
+                line-height: 17px;
+                margin-left: 0;
+            }
         }
         &__title {
             font-size: 20px;
