--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -5,6 +5,11 @@
     box-sizing: border-box;
     margin: 0 auto;
 }
+@media (max-width: 642px) {
+    .container {
+        padding: 0 20px;
+    }
+}
 @media (max-width: 350px) {
     .container {
         padding: 0 15px;
