--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     padding: 75px 0 50px 0;
     background: #1D2630;
+    margin-top: auto;
     &__wrapper {
         display: flex;
         justify-content: space-between;
