--- a/scss/_imports.scss
+++ b/scss/_imports.scss
@@ -7,6 +7,7 @@
 @import './components/select';
 @import './components/buttons';
 @import './components/modal';
+@import './components/sale-card';
 
 @import './sections/header';
 @import './sections/hero';
@@ -34,3 +35,8 @@
 @import './sections/main-about';
 @import './sections/super';
 @import './sections/people';
+@import './sections/connection';
+@import './sections/sales';
+
+
+@import './sections/sale-list';
